# douyin-mcp-server

./: .env.example  .gitignore  AGENTS.md  PROGRESS.md  README.md  conftest.py  prompts.example.json  pyproject.toml
docs/: DESIGN.md  DEV_PLAN.md  FRONTEND_REFACTOR_PLAN.md  MINIPROGRAM_UI_OPTIMIZATION.md  WECHAT_MINIPROGRAM_PLAN.md
douyin-video/scripts/: douyin_downloader.py
miniprogram/: README.md  app.js  app.json  app.wxss  config.js  package-lock.json  package.json  project.config.json  sitemap.json
miniprogram/components/chat-message/: index.js  index.json  index.wxml  index.wxss
miniprogram/custom-tab-bar/: index.js  index.wxml  index.wxss
miniprogram/pages/chat/: chat.js  (+3 more)
miniprogram/scripts/: build-npm.sh
miniprogram/utils/: api-config.js  auth.js  chat-scenarios.js  markdown.js  models.js  request.js  session.js  tab.js  token.js  user.js
scripts/: check_api_keys.py
skills/miniprogram-design/: SKILL.md
tests/: helpers.py  test_api_admin_prompts.py  test_api_auth.py  test_api_cards.py  test_api_cards_edit.py  test_api_chat.py  test_api_documents.py  test_api_from_link.py  test_auth.py  test_db.py  test_db_users.py  test_documents.py  test_extract_limits.py  test_llm.py  test_log_config.py  test_prompts.py  test_qa.py  test_retrieve.py  test_settings.py  test_smoke.py  test_structure.py  test_video_cache.py
web/: app.py
web/core/: __init__.py  auth.py  db.py  documents.py  http_log.py  llm.py  log_config.py  prompts.py  qa.py  retrieve.py  settings.py  structure.py  wechat.py
web/static/: manifest.webmanifest
web/templates/: index.html
(+19 files in other folders)
