[project]
name = "zizhuang-assistant"
version = "0.1.0"
description = "自装助手：把短视频里的装修知识沉淀为个人/共享知识库，并基于知识库对话问答（微信小程序 + FastAPI）"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "yzfly", email = "yz.liu.me@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "requests",
    "ffmpeg-python",
    "tqdm",
    "dashscope",
    "fastapi",
    "uvicorn",
    "jinja2",
    "pypdf>=6.14.2",
    "openpyxl>=3.1.5",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]

[tool.uv]
# 应用型仓库，不构建/安装为 Python 包，uv sync 只装依赖
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
